[package]
name = "everytrack_cron"
version = "0.1.0"
authors = ["Chris Liu <chrisliupascal@gmail.com>"]
edition = "2021"
description = "Service that handles periodic job for Everytrack"
readme = "README.md"
license = "MIT"

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.25", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "uuid", "time"] }
time = { version = "0.3.34", features = ["formatting", "serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
